--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
+    "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "9.11.1",
