--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.10",
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "1.5.0",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +48,7 @@
     "input-otp": "1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
+    "maplibre-gl": "^5.13.0",
     "next": "16.0.3",
     "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
@@ -54,6 +56,7 @@
     "react-day-picker": "9.11.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-map-gl": "^8.1.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "3.4.1",
     "sonner": "^2.0.7",
