--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
     "maplibre-gl": "^5.13.0",
+    "motion": "^12.23.24",
     "next": "16.0.3",
     "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
