--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.66.0",
     "react-map-gl": "^8.1.0",
     "react-resizable-panels": "^3.0.6",
+    "react-svg-credit-card-payment-icons": "^5.1.2",
     "recharts": "3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
